fix: icon details alignment

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -958,7 +958,8 @@ main {
         font-size: 16px;
         letter-spacing: 0.5px;
         font-weight: 400;
-        display: block;
+        display: flex;
+        align-items: center;
         width: fit-content;
         border-radius: 2px;
 
